--- a/environment.yml
+++ b/environment.yml
@@ -2,17 +2,23 @@ name: smol
 channels:
   - pytorch-nightly
   - nvidia
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
   - blas=1.0=mkl
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.05.30=h06a4308_0
-  - certifi=2023.7.22=py310h06a4308_0
+  - ca-certificates=2023.7.22=hbcca054_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py310h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - comm=0.1.4=pyhd8ed1ab_0
   - cryptography=41.0.2=py310h22a60cf_0
   - cuda-cudart=12.1.105=0
   - cuda-cupti=12.1.105=0
@@ -21,6 +27,10 @@ dependencies:
   - cuda-nvtx=12.1.105=0
   - cuda-opencl=12.2.128=0
   - cuda-runtime=12.1.0=0
+  - debugpy=1.6.7=py310h6a678d5_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
   - ffmpeg=4.2.2=h20bf706_0
   - filelock=3.9.0=py310h06a4308_0
   - freetype=2.12.1=h4a9f257_0
@@ -30,8 +40,13 @@ dependencies:
   - gnutls=3.6.15=he1e5248_0
   - idna=3.4=py310h06a4308_0
   - intel-openmp=2023.1.0=hdb19cb5_46305
+  - ipykernel=6.25.1=pyh71e2992_0
+  - ipython=8.14.0=pyh41d4057_0
+  - jedi=0.19.0=pyhd8ed1ab_0
   - jinja2=3.1.2=py310h06a4308_0
   - jpeg=9e=h5eee18b_1
+  - jupyter_client=7.3.4=pyhd8ed1ab_0
+  - jupyter_core=4.12.0=py310hff52083_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
@@ -53,6 +68,7 @@ dependencies:
   - libnvjpeg=12.1.1.14=0
   - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.39=h5eee18b_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.0=h6a678d5_2
@@ -64,6 +80,7 @@ dependencies:
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.1=py310h7f8727e_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mkl=2023.1.0=h213fc3f_46343
   - mkl-service=2.4.0=py310h5eee18b_1
   - mkl_fft=1.3.6=py310h1128e8f_1
@@ -72,37 +89,68 @@ dependencies:
   - mpfr=4.0.2=hb69a4c5_1
   - mpmath=1.3.0=py310h06a4308_0
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.1=py310h06a4308_0
   - numpy=1.25.2=py310h5f9d8c6_0
   - numpy-base=1.25.2=py310hb5e798b_0
   - openh264=2.1.1=h4ff587b_0
   - openssl=3.0.10=h7f8727e_2
+  - packaging=23.1=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
   - pillow=9.4.0=py310h6a678d5_0
   - pip=23.2.1=py310h06a4308_0
+  - prompt-toolkit=3.0.39=pyha770c72_0
+  - prompt_toolkit=3.0.39=hd8ed1ab_0
+  - psutil=5.9.0=py310h5eee18b_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.16.1=pyhd8ed1ab_0
   - pyopenssl=23.2.0=py310h06a4308_0
   - pysocks=1.7.1=py310h06a4308_0
   - python=3.10.12=h955ad1f_0
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.10=2_cp310
   - pytorch=2.1.0.dev20230825=py3.10_cpu_0
   - pytorch-cuda=12.1=ha16c6d3_5
   - pytorch-mutex=1.0=cpu
   - pyyaml=6.0=py310h5eee18b_1
+  - pyzmq=25.1.0=py310h6a678d5_0
   - readline=8.2=h5eee18b_0
   - requests=2.31.0=py310h06a4308_0
   - setuptools=68.0.0=py310h06a4308_0
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.41.2=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - sympy=1.11.1=py310h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.12=h1ccaba5_0
   - torchaudio=2.1.0.dev20230825=py310_cpu
   - torchvision=0.16.0.dev20230825=py310_cpu
+  - tornado=6.1=py310h5764c6d_3
+  - traitlets=5.9.0=pyhd8ed1ab_0
   - typing_extensions=4.7.1=py310h06a4308_0
-  - tzdata=2023c=h04d1e81_0
   - urllib3=1.26.16=py310h06a4308_0
+  - wcwidth=0.2.6=pyhd8ed1ab_0
   - wheel=0.38.4=py310h06a4308_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.2=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.4=h9c3ff4c_1
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
+  - pip:
+    - contourpy==1.1.0
+    - cycler==0.11.0
+    - fonttools==4.42.1
+    - kiwisolver==1.4.5
+    - matplotlib==3.7.2
+    - pandas==2.0.3
+    - pyparsing==3.0.9
+    - pytz==2023.3
+    - seaborn==0.12.2
+    - tqdm==4.66.1
+    - tzdata==2023.3
